--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/muhammad510/bookstore#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.0",
     "mongodb": "^7.0.0",
